fix style issues

--- a/css/icons.css
+++ b/css/icons.css
@@ -33,7 +33,8 @@
 #filestable .action [class^="custom-icon-"],
 #filestable .action [class*=" custom-icon-"],
 .rightClickMenu [class^="custom-icon-"],
-.rightClickMenu [class*=" custom-icon-"] {
+.rightClickMenu [class*=" custom-icon-"],
+.popovermenu li > .menuitem span[class*=" custom-icon-"] {
     font-size: 20px;
     padding: 12px;
     color: black;
